cluster/base/infrastructure/26-keycloak/cilium-policy.yaml
---
# Allow Keycloak and PostgreSQL to communicate within the namespace.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-intra-namespace-egress
  namespace: keycloak
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - {}
---
# Allow the Cilium gateway to reach Keycloak (HTTP on port 8080 via HTTPRoute).
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress
  namespace: keycloak
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  ingress:
    - fromEntities:
        - ingress
